# salt-lint

./: .coveragerc  .flake8  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pylintrc  .readthedocs.yml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  README.rst  mkdocs.yml  pyproject.toml  pytest.ini  setup.py  test-deps.txt  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: actions.yml  build.yml  docker-release-edge.yml  docker-release-stable.yml  lint.yml  linter.yml  publish-to-pypi.yml  release.yml  tox.yml
docker/: Dockerfile
docs/: conf.py  contributing.rst  index.md  index.rst  requirements.txt  salt-lint.1
docs/about/: license.md
docs/contributing/: contributing.md
docs/man/: salt-lint.1
docs/rules/: deprecations.md  formatting.md  index.md  recommendations.md
lib/saltlint/: __init__.py  __main__.py  utils.py  version.py
saltlint/: __init__.py  __main__.py  cli.py  config.py  linter.py  utils.py
saltlint/formatters/: __init__.py  codeclimate.py  color.py  default.py  severity.py  textformat.py
saltlint/linter/: __init__.py  collection.py  match.py  rule.py  runner.py
saltlint/rules/: CmdRunQuietRule.py  CmdWaitRecommendRule.py  ColonFormatRule.py  CommentHasSpaceRule.py  CompoundMatchSpacesRule.py  CronIdRule.py  CronStateHasIdentifierRule.py  EOFRule.py  FileExtensionRule.py  FileManagedReplaceContentRule.py  FileModeLeadingZeroRule.py  FileModeQuotationRule.py  FileModeSingleQuotationRule.py  HyphenHasSpaceRule.py  JinjaCommentHasSpacesRule.py  JinjaPillarGrainsGetFormatRule.py  JinjaStatementHasSpacesRule.py  JinjaTemplateHasRightExtensionRule.py  JinjaVariableHasSpacesRule.py  LineTooLongRule.py  NewLineAtEndOfFileRule.py  NewLineAtTheEndRule.py  NoIrregularSpacesRule.py  NoTabsRule.py  NoTwoEmptyLinesRule.py  NotEvenIndentationRule.py  PillarGetNestedStructure.py  SLSFileNameRule.py  (+20 more)
tests/: __init__.py  test-jinja-template.right.j2
(+52 files in other folders)
